--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <!-- Optional: Add any additional meta tags, stylesheets, or scripts here -->
 </head>
 <body>
-    Hello World!
+    <img src="index/sebas-bleizeffer.gif" alt="meow">
 </body>
 </html>
